--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
    - cpanm -q -n Dancer::Plugin::SiteMap;
    - cpanm -q -n Dancer::Plugin::DirectoryView;
    - cpanm -q -n Dancer::Plugin::Auth::Htpasswd;
-   - cpanm -q -n DBI
+   - cpanm -q -n DBD::SQLite;
    - cpanm -q -n File::Slurp
 
 notifications:
