Working login system (edit, add, delete) and layouts.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
    - cpanm -q -n Dancer::Plugin::Auth::Htpasswd;
    - cpanm -q -n DBD::SQLite;
    - cpanm -q -n File::Slurp
+   - cpanm -q -n Crypt::SaltedHash;
+
 
 notifications:
    recipients:
