--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
    - cpanm -q -n DBD::SQLite
    - cpanm -q -n File::Slurp
    - cpanm -q -n Crypt::SaltedHash
-   - cpanm -q -n GD
+   - cpanm -n GD
    - cpanm -q -n GD::SecurityImage
    - cpanm -q -n Dancer::Plugin::Captcha::SecurityImage 
 
