--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,5 @@ notifications:
    email:
       on_success: always
       on_failure: always
+
+after_failure: "cat /home/travis/.cpanm/work/*.*/build.log"
