--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ perl:
 before_install:
    - sudo apt-get update
    - sudo apt-get install libgd-gd2-perl
+   - sudo apt-get install libgd2-dev
 
 install:
    - cpanm -q -n Template
